--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="grey_20">#FFF2F2F2</color>
     <color name="grey_30">#FFE5E5E5</color>
     <color name="grey_60">#FF818186</color>
+    <color name="grey_80">#FF545457</color>
 
     <!-- ambience -->
     <color name="green_primary">#FF7B8501</color>
