--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -25,4 +25,12 @@
         android:name="hr.foi.academiclifestyle.mybehaviours.MyBehavioursFragment"
         android:label="@string/nav_mybehaviours"
         tools:layout="@layout/fragment_mybehaviours" />
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="hr.foi.academiclifestyle.auth.LoginFragment"
+        android:label="LoginFragment" />
+    <fragment
+        android:id="@+id/registerFragment"
+        android:name="hr.foi.academiclifestyle.auth.RegisterFragment"
+        android:label="RegisterFragment" />
 </navigation>
