--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -33,7 +33,7 @@
             android:layout_height="0dp"
             android:fontFamily="sans-serif"
             android:gravity="center_horizontal|center_vertical"
-            android:text="Academic Lifestyle"
+            android:text="@string/app_name"
             android:textColor="@color/white_acc"
             android:textSize="23sp"
             android:typeface="normal"
@@ -61,7 +61,7 @@
             android:layout_height="wrap_content"
             android:clickable="true"
             android:contextClickable="true"
-            android:lineSpacingExtra="0sp"
+            android:focusable="true"
             android:paddingTop="10dp"
             android:text="Login"
             android:textColor="@color/white_acc"
@@ -78,7 +78,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:clickable="true"
-            android:contextClickable="false"
+            android:focusable="true"
             android:paddingTop="10dp"
             android:text="Register"
             android:textColor="@color/white_acc"
