--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -200,8 +200,8 @@
 
         <Button
             android:id="@+id/btnRegister"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="118dp"
+            android:layout_height="50dp"
             android:backgroundTint="@color/yellow_acc"
             android:text="Submit"
             android:textColor="@color/white_acc"
