--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -12,36 +12,35 @@
         android:layout_height="match_parent"
         android:background="@color/foi_red">
 
-
-        <ImageView
-            android:id="@+id/logoRegister"
-            android:layout_width="wrap_content"
-            android:layout_height="?attr/actionBarSize"
-            android:scaleType="fitCenter"
-            android:src="@drawable/ic_launcher_foreground"
+        <RelativeLayout
+            android:id="@+id/relativeHeadbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.0">
 
-        <TextView
-            android:id="@+id/applicationNameRegister"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:fontFamily="sans-serif"
-            android:gravity="center_horizontal|center_vertical"
-            android:text="@string/app_name"
-            android:textColor="@color/white_acc"
-            android:textSize="23sp"
-            android:typeface="normal"
-            app:layout_constraintBottom_toBottomOf="@id/logoRegister"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/logoRegister"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
+            <ImageView
+                android:id="@+id/logoRegister"
+                android:layout_width="110dp"
+                android:layout_height="?attr/actionBarSize"
+                android:scaleType="fitStart"
+                android:src="@drawable/ic_launcher_foreground" />
+
+            <TextView
+                android:id="@+id/applicationNameRegister"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:fontFamily="sans-serif"
+                android:gravity="center_horizontal|center_vertical"
+                android:text="@string/app_name"
+                android:textColor="@color/white_acc"
+                android:textSize="23sp"
+                android:typeface="normal" />
+        </RelativeLayout>
 
         <ImageView
             android:id="@+id/registerPicture"
@@ -51,7 +50,7 @@
             app:layout_constraintBottom_toTopOf="@+id/txtRegister_login"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/applicationNameRegister"
+            app:layout_constraintTop_toBottomOf="@+id/relativeHeadbar"
             app:srcCompat="@drawable/login_picture" />
 
         <TextView
@@ -62,6 +61,7 @@
             android:contextClickable="true"
             android:focusable="true"
             android:paddingTop="10dp"
+            android:paddingBottom="2dp"
             android:text="Login"
             android:textColor="@color/white_acc"
             android:textSize="22sp"
@@ -69,7 +69,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.13"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/applicationNameRegister"
+            app:layout_constraintTop_toBottomOf="@+id/relativeHeadbar"
             app:layout_constraintVertical_bias="0.471" />
 
         <TextView
@@ -79,6 +79,7 @@
             android:clickable="true"
             android:focusable="true"
             android:paddingTop="10dp"
+            android:paddingBottom="2dp"
             android:text="Register"
             android:textColor="@color/white_acc"
             android:textSize="22sp"
@@ -86,13 +87,13 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.87"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/applicationNameRegister"
+            app:layout_constraintTop_toBottomOf="@+id/relativeHeadbar"
             app:layout_constraintVertical_bias="0.471" />
 
         <View
             android:id="@+id/registerDivider"
             android:layout_width="0dp"
-            android:layout_height="5dp"
+            android:layout_height="3dp"
             android:background="@color/yellow_acc"
             android:backgroundTint="@color/yellow_acc"
             app:layout_constraintBottom_toTopOf="@+id/txtUsernameInput"
@@ -205,7 +206,7 @@
             android:backgroundTint="@color/yellow_acc"
             android:text="Submit"
             android:textColor="@color/white_acc"
-            android:textSize="20sp"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.855"
