--- a/app/src/main/res/layout/fragment_ambience.xml
+++ b/app/src/main/res/layout/fragment_ambience.xml
@@ -5,7 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
-        tools:context=".ambience.AmbienceFragment">
+        tools:context=".ui.ambience.AmbienceFragment">
 
         <TextView
             android:layout_width="match_parent"
