AIR2020-53 Dodati funkcionalnost pamćenja prijavljenog korisnika - Projekt rekonstruiran da koristi jedan repository koji spaja lokalnu i remote bazu - Dodan splash screen putem kojeg se provjerava status korisnika - Dodana logout ikona - Dodana background provjera tokena nakon prijave u aplikaciju - Dodane nove metode za dohvaćanje podataka u repository - Optimizirani pozivi da koriste korutine (non blocking)

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -33,4 +33,8 @@
         android:id="@+id/registerFragment"
         android:name="hr.foi.academiclifestyle.ui.auth.RegisterFragment"
         android:label="RegisterFragment" />
+    <fragment
+        android:id="@+id/splashFragment"
+        android:name="hr.foi.academiclifestyle.ui.auth.SplashFragment"
+        android:label="SplashFragment" />
 </navigation>
