AIR2020-55 postavljanje fragmenta za prikaz postavki

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -37,4 +37,9 @@
         android:id="@+id/splashFragment"
         android:name="hr.foi.academiclifestyle.ui.auth.SplashFragment"
         android:label="SplashFragment" />
+    <fragment
+        android:id="@+id/fragmentSettings"
+        android:name="hr.foi.academiclifestyle.ui.settings.SettingsFragment"
+        android:label="@string/nav_settings"
+        tools:layout="@layout/fragment_settings" />
 </navigation>
