--- a/app/src/main/res/menu/navdrawer_menu.xml
+++ b/app/src/main/res/menu/navdrawer_menu.xml
@@ -30,7 +30,7 @@
     </group>
     <group android:id="@+id/nav_secondary" android:checkableBehavior="single">
         <item
-            android:id="@+id/settings"
+            android:id="@+id/fragmentSettings"
             android:icon="@drawable/ic_cogwheel"
             android:title="@string/nav_settings" />
         <item
