AIR2020-55 izrada elemenata na settings fragmentu

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,4 +21,10 @@
     <style name="Theme.AcademicLifestyle.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 
+    <style name="MyEditTextStyle2" parent="Widget.AppCompat.EditText">
+        <item name="colorControlActivated">@color/foi_red</item>
+        <item name="colorControlNormal">@color/white_acc</item>
+    </style>
+
+
 </resources>
