AIR2020-57 Početna implementacija funkcionalnosti My Classes - Dodan LocalDate modul za API <26 - Dodani novi network i local modeli za eventove - Dodan EventDao te metode za upravljanje istim - Baza privremeno prebačena na lokalnu - Popravljeno prikazivanje Token Expired poruke - Dodan animirani toggle za NavDrawer - Popravljen crash kod provjere tokena ako nema internetske veze - Dodani tabovi pod My Classes modul, trenutno su dizajnerski implementirana prva dva - Implementirano dohvaćanje eventova po danima kalendara - Dodana globalna maska koja se može koristiti kao loading - Razne dorade na xml-ovima pogleda

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -37,4 +37,16 @@
         android:id="@+id/splashFragment"
         android:name="hr.foi.academiclifestyle.ui.auth.SplashFragment"
         android:label="SplashFragment" />
+    <fragment
+        android:id="@+id/scheduleFragment"
+        android:name="hr.foi.academiclifestyle.ui.myclasses.ScheduleFragment"
+        android:label="ScheduleFragment" />
+    <fragment
+        android:id="@+id/attendanceFragment"
+        android:name="hr.foi.academiclifestyle.ui.myclasses.AttendanceFragment"
+        android:label="AttendanceFragment" />
+    <fragment
+        android:id="@+id/statsGoalsFragment"
+        android:name="hr.foi.academiclifestyle.ui.myclasses.StatsGoalsFragment"
+        android:label="StatsGoalsFragment" />
 </navigation>
