--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,9 +2,8 @@
 <layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.MainActivity"
+    tools:context=".ui.MainActivity">
 
-    >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -13,7 +12,8 @@
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:theme="@style/Theme.AcademicLifestyle.AppBarOverlay">
+            android:theme="@style/Theme.AcademicLifestyle.AppBarOverlay"
+            app:elevation="0dp">
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -50,6 +50,7 @@
             android:layout_height="match_parent"
             tools:openDrawer="start">
 
+            <include layout="@layout/include_progress_overlay"/>
             <include layout="@layout/content_main" />
 
             <com.google.android.material.navigation.NavigationView
