--- a/app/src/main/res/layout/fragment_myclasses_attendance.xml
+++ b/app/src/main/res/layout/fragment_myclasses_attendance.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <ScrollView
         android:id="@+id/scrollView2"
@@ -11,7 +11,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="@color/white_acc"
             android:orientation="vertical"
             android:layout_marginTop="20dp"
@@ -25,7 +25,7 @@
                     android:id="@+id/semesterText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Semestar:"
+                    android:text="Semester:"
                     android:textColor="@color/grey_80"
                     android:textSize="18dp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -118,26 +118,17 @@
                         android:layout_weight="1.5"/>
                 </TableRow>
 
-                <TableRow
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="50dp">
-
-                    <TextView
-                        android:text="-"
-                        android:layout_width="0dp"
-                        android:layout_height="50dp"
-                        android:textColor="@color/grey_80"
-                        android:gravity="center_vertical"
-                        android:layout_weight="3"/>
-
-                    <TextView
-                        android:text="-"
-                        android:layout_width="0dp"
-                        android:layout_height="50dp"
-                        android:textColor="@color/grey_80"
-                        android:gravity="center_vertical"
-                        android:layout_weight="1.5"/>
-                </TableRow>
+                    android:layout_height="wrap_content"
+                    android:background="@color/white_acc">
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/attendanceRecycler"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:clipToPadding="false"
+                        tools:listitem="@layout/attendance_item"/>
+                </LinearLayout>
 
             </TableLayout>
         </LinearLayout>
